# foodie

./: Makefile  pyproject.toml
.github/workflows/: run-test.yml
app/: main.py
app/graphql_api/: schema.py
app/graphql_api/mutations/: user_mutation.py
app/graphql_api/queries/: user_query.py
app/models/: user_model.py
app/repositories/: user_repository.py
app/services/: user_service.py
database/: db.py
tests/: conftest.py  test_user_service.py
